# BRIDGE

./: *toml  .coverage  .dockerignore  .env  .gcloudignore  .gitignore  Dockerfile  GE_NOTES  GaussianMixture.ipynb  INSTALL  MCB_&_WandB_ConnTextUL_Model_(in_progress).ipynb  PLAN.md  PYTORCH_NIGHTLY_SETUP.md  README.md  README_instructions.md  SETUP_uv_ENVIRONEMENT.md  SLIDING_WINDOW_TEST_README.md  app.py  autoregressive_scaling_results_20250702_174423.csv  autoregressive_scaling_results_20250702_214721.csv  autoregressive_scaling_results_20250703_085814.csv  autoregressive_scaling_results_20250703_111103.csv  autoregressive_scaling_results_20250703_112456.csv  awk.x  build_enhanced_container.sh  config.yaml  config_kidwords.yaml  config_kidwords_unique.yaml  cov.xml  create_report.ipynb  create_report2.ipynb  cuda_test.py  dataset.py  dataset_orig.py  environment.yml  explore.ipynb  generate_uv.sh  gordon_test.py  launch_sliding_window_test.py  main.py  (+42 more)
.devcontainer/: Dockerfile-gpu.dev  Dockerfile.cpu.dev  Dockerfile.dev  Dockerfile.gpu.dev  detect-platform.sh  devcontainer.json
.github/workflows/: action.yml  ci.yml
GE_notebooks/: model_reload.ipynb  simpler_reload.ipynb
Traindata/: README  Traindata.py  tutorial.ipynb  utilities.py
analyses/: test_from_checkpoints.ipynb  test_from_checkpoints_SSSR2024.ipynb
app/config/: dataset_config.yaml  logging_config.yaml  metrics_config.yaml  model_config.yaml  sweep_config.yaml  training_config.yaml  wandb_config.yaml
bridge/: __init__.py
bridge/core/: phonreps.csv  phonreps.py
bridge/utils/: __init__.py  device_manager.py  helper_functions.py
csv/: full_attention_results.csv  local_atention_results.csv  pivoted_attention_results_2025-07-08_run1.csv  pivoted_attention_results_2025-07-10_run2.csv  training_mode_attention_results.csv
csv/full_eval_vs_train/: README.md  full_attention_results_eval.csv  full_attention_results_train.csv
csv/good_scaling/: sliding_window_results.csv
csv/poor_scaling/: sliding_window_results.csv
data/: TOWRE2_sight_words.json  create_finetuning_sets.Rmd  create_maintraining_sets.ipynb  create_pretraining_sets.Rmd  create_testsets.ipynb  custom_cmudict.json  data.csv  data_1.csv  data_test1.csv  data_test100.csv  data_test1000.csv  data_test20.csv  data_test250.csv  data_test40479.csv  data_test50.csv  data_test500.csv  input_data.ipynb  input_data.pkl  input_data_1.pkl  into_reading_sequentially_arranged_repeated_1_time.pkl  kidwords_5000000_020724_unique.csv  phonreps.csv  prepare_csv.py  preprocess.py  samples.R  sampling_distributions.R  sidewalk_data.csv  test.csv  to_unique.ipynb  towre.ipynb  wj_iii_form_a.json  words_in_into_reading_with_nonalpha_inside.ipynb  write_cmu.ipynb
data/.cache/: data_test00020.csv  data_test00050.csv  data_test00100.csv
data/pretraining/: input_data_1.pkl  input_data_10.pkl  input_data_11.pkl  input_data_12.pkl  input_data_13.pkl  input_data_14.pkl  input_data_15.pkl  input_data_16.pkl  input_data_17.pkl  input_data_18.pkl  input_data_19.pkl  input_data_2.pkl  input_data_20.pkl  input_data_21.pkl  input_data_22.pkl  input_data_23.pkl  input_data_24.pkl  input_data_25.pkl  input_data_26.pkl  input_data_27.pkl  input_data_28.pkl  input_data_29.pkl  input_data_3.pkl  input_data_30.pkl  input_data_31.pkl  input_data_32.pkl  input_data_33.pkl  input_data_34.pkl  input_data_35.pkl  input_data_36.pkl  input_data_37.pkl  input_data_38.pkl  input_data_39.pkl  input_data_4.pkl  input_data_40.pkl  input_data_41.pkl  input_data_42.pkl  input_data_43.pkl  input_data_44.pkl  input_data_45.pkl  (+10 more)
data/raw/: childes_bridge_receptive_no_compounds.csv  cmu_words.csv  custom_cmudict.json  custom_frequencies.json  finetuning_ids.csv  pretrain_ids.csv  pretraining_ids.csv  words_in_into_reading_with_nonalpha_inside.csv  words_in_into_reading_with_nonalpha_inside_special_frequency.csv  words_in_into_reading_with_nonalpha_inside_special_pronunciation.csv
data/tests/: adjusted_ewfg.pkl  fry_1980.pkl  test1.csv  test2.csv  test_data.pkl
data/testsets/: ewfg.csv  fry_1980.csv  fry_1980.json  tasa_unique_words.json
infra/terraform/: .terraform.lock.hcl  main.tf  terraform.tfvars
latent_scope_implementation/: ds_prepper.py  latent_scope_starter.py  test.ipynb
latent_space_clustering/: README.md  dataloader.py  gaussian_mixture_model.py  latent_space.py  model_evolution_visualizer.py  model_trainer.py  visualization.py
latent_space_clustering/latent_space_clustering.egg-info/: PKG-INFO  SOURCES.txt
latent_space_clustering/tests/: test_dataloader.py
models/: ConnTextUL_ReadingModel.ipynb  mywandb.py
raw/: orthreps.json  orthreps_onehot.json  phonreps.csv  wordlist.csv
results/: pretraining_results.Rmd  pretraining_results.ipynb  training1.csv  utilities.py
results/pretraining_results_1/: NOTES
scripts/: run.x  run_test.x  run_test_sweep.x  run_wandb.x  run_wandb_test.x
src/: __init__  dataset.py  main.py  model.py  model_new.py  plot_impl.py  train.py  train_impl.py  wandb_wrapper.py
src/tests/: test_wandb.py  test_wandbwrapper.py
src/utils/: __init__.py  device.py  device_manager.py  helper_functions.py  helper_funtions.py  prepare_csv.py
src_legacy/: dataset.py  main.py  model.py  plot_impl.py  train.py  train_impl.py  wandb_wrapper.py
src_temp/: main.py  plot_impl.py  train.py  train_impl.py
tests/: README  conftest.py  test_arguments.py  test_dataset.py  test_full_code.py  test_module.py  test_postprocess.py  test_restart.py  test_wandb.py  test_wandbwrapper.py
tests/domain/: conftest.py  test_legacy_conntextul_dataset.py  test_legacy_cuda_dict.py  test_legacy_phonemizer.py  (+2 more)
unit_test_example/: README  __init__.py  my_code.py
(+287 files in other folders)
