[tool.poetry]
name = "bridge"
version = "0.1.0"
description = "A computational model for naming printed words that bridges orthographic and phonological representations"
authors = ["Nathan Crock <nathan@emelex.com>"]
readme = "README.md"
homepage = "https://github.com/emelex-ai/BRIDGE"
repository = "https://github.com/emelex-ai/BRIDGE"
documentation = "https://github.com/emelex-ai/BRIDGE"
keywords = ["nlp", "psycholinguistics", "phonology", "orthography", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
include = ["bridge/data/*.csv"]


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
nltk = "^3.8.1"
numpy = "^1.26.0"
pandas = "^2.1.2"
protobuf = "^5.28.2"
pydantic = "^2.9.2"
pyyaml = "^6.0.2"
torch = "^2.4.1"
tqdm = "^4.66.5"
wandb = {version = "^0.18.3", optional = true}
google-cloud-storage = {version = "^3.1.0", optional = true}

[tool.poetry.extras]
wandb = ["wandb"]
gcp = ["google-cloud-storage"]
all = ["wandb", "google-cloud-storage"]

[tool.poetry.group.dev.dependencies]
deptry = "^0.23.0"
pytest = "^8.3.5"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v -s"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"