[project]
name = "bridge"
version = "0.1.0"
description = "A computational model for naming printed words that bridges orthographic and phonological representations."
authors = [
    {name = "Nathan Crock", email = "nathan@emelex.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
keywords = ["nlp", "psycholinguistics", "phonology", "orthography", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "google-cloud-storage>=3.1.0,<4.0.0",
    "nltk>=3.8.1,<4.0.0",
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.1.2,<3.0.0",
    "protobuf>=5.28.2,<6.0.0",
    "pydantic>=2.9.2,<3.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "torch>=2.4.0,<3.0.0",
    # nightly
    # "torch>=2.9.0.dev20250704",
    "torchsummary>=1.5.1",
    "tqdm>=4.66.5,<5.0.0",
    "pandas",
    "matplotlib>=3.10.3",
    "local-attention>=1.11.1",
    "seaborn>=0.13.2",
    "jaxtyping>=0.3.2",
    "beartype>=0.21.0",
]

[project.optional-dependencies]
wandb = ["wandb>=0.18.3,<1.0.0"]
gcp = ["google-cloud-storage>=3.1.0,<4.0.0"]
all = ["wandb>=0.18.3,<1.0.0", "google-cloud-storage>=3.1.0,<4.0.0"]
cuda = [
	"ninja>=1.10.0", 
	"psutil>=7.0.0", 
	#"vllm-flash-attn==2.6.2",
]
dev = [
    "deptry>=0.23.0",
    "pytest>=8.4.0",
    "pytest-mock>=3.14.1",
    "wandb>=0.18.3,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/emelex-ai/BRIDGE"
Repository = "https://github.com/emelex-ai/BRIDGE"
Documentation = "https://github.com/emelex-ai/BRIDGE"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bridge"]

[tool.hatch.build.targets.wheel.sources]
"bridge/data" = "bridge/data"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v -s"

# Will prevent false positives when typehinting jaxtyping
[tool.ruff.lint]
typing-modules = ["beartype.typing"]

[lint.per-file-ignores]
"**/*.py" = ["F722"]  # Or specify paths like "src/*.py"
